[package]
name = "left-right"
version = "0.11.5"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "A concurrency primitive for high concurrency reads over a single-writer data structure."
repository = "https://github.com/jonhoo/left-right.git"

keywords = ["concurrency","lock-free"]
categories = ["concurrency"]

[dependencies]
slab = "0.4.1"

[dev-dependencies]
rand = "0.8.4"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[target.'cfg(loom)'.dependencies]
loom = "0.5.6"
