[package]
name = "left-right"
version = "0.11.7"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "A concurrency primitive for high concurrency reads over a single-writer data structure."
repository = "https://github.com/jonhoo/left-right.git"

keywords = ["concurrency","lock-free"]
categories = ["concurrency"]

[dependencies]
slab = "0.4.1"
crossbeam-utils = { version = "0.8", default-features = false }

[target.'cfg(loom)'.dependencies]
loom = "0.7.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
