[package]
name = "concurrent-map-bench"
version = "0.1.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

[dependencies]
evmap = { path = "../", features = ["hashbrown", "parking_lot", "smallvec"] }
chashmap = "2.1.0"
clap = "2.20.3"
zipf = "0.2.0"
rand = "0.3"
parking_lot = "0.7.1"

[target.'cgf(not(target_env = "msvc"))'.dependencies]
jemallocator = {version = "0.1.9", optional = true }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
debug = false

[features]
nightly = ["evmap/nightly_hashbrown", "evmap/nightly_parking_lot", "evmap/nightly_smallvec", "jemallocator"]
