[package]
name = "concurrent-map-bench"
version = "0.1.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

[dependencies]
evmap = { path = "../" }
chashmap = "2.1.0"
clap = "2.20.3"
zipf = "0.2.0"
rand = "0.3"
parking_lot = "0.7.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
debug = false
