[package]
name = "evmap-derive"
version = "0.1.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "Derive macro for evmap::ShallowCopy"
repository = "https://github.com/jonhoo/rust-evmap.git"

keywords = ["derive","evmap"]
categories = []

[badges]
azure-devops = { project = "jonhoo/jonhoo", pipeline = "evmap", build = "8" }
codecov = { repository = "jonhoo/rust-evmap", branch = "master", service = "github" }
maintenance = { status = "passively-maintained" }

[lib]
proc-macro = true

[dependencies]
syn = "1.0.16"
quote = "1.0.2"
proc-macro2 = "1.0.9"

[dev-dependencies]
evmap = { path = "../evmap", version = "11.0.0-alpha.2" }
trybuild = "1.0.24"
