[package]
name = "evmap"
version = "11.0.0-alpha.2"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "A lock-free, eventually consistent, concurrent multi-value map."
repository = "https://github.com/jonhoo/rust-evmap.git"

keywords = ["map","multi-value","lock-free"]
categories = ["concurrency", "data-structures"]

[badges]
azure-devops = { project = "jonhoo/jonhoo", pipeline = "evmap", build = "8" }
codecov = { repository = "jonhoo/rust-evmap", branch = "master", service = "github" }
maintenance = { status = "passively-maintained" }

[features]
default = []
indexed = ["indexmap"]
eviction = ["indexed", "rand"]

[dependencies]
indexmap = { version = "1.1.0", optional = true }
smallvec = "1.0.0"
hashbag = "0.1.2"
bytes = { version = "0.5", optional = true }
rand = { version = "0.7", default-features = false, features = ["alloc"], optional = true }
left-right = { version = "0.9.0", path = "../left-right" }

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
rand = "0.7"
